update number of parties

--- a/codebook/codebook.html
+++ b/codebook/codebook.html
@@ -1662,8 +1662,8 @@ body {
 </div>
 <div id="core-vs.-external-parties" class="section level2">
 <h2>Core vs. external parties</h2>
-<p><strong>Core parties</strong> are observations that have been gathered by the Party Facts project. They can be added and edited on the Party Facts webpage. Currently we include <strong>5718 core parties</strong>.</p>
-<p><strong>External parties</strong> are observations with party information extracted from other datasets – see <a href="https://github.com/hdigital/partyfactsdata">Party Facts Data</a>. Currently we include <strong>34512 external parties</strong>.</p>
+<p><strong>Core parties</strong> are observations that have been gathered by the Party Facts project. They can be added and edited on the Party Facts webpage. Currently we include around <strong>5700 core parties</strong>.</p>
+<p><strong>External parties</strong> are observations with party information extracted from other datasets – see <a href="https://github.com/hdigital/partyfactsdata">Party Facts Data</a>. Currently we include around <strong>35000 external parties</strong>.</p>
 </div>
 </div>
 <div id="countries" class="section level1">
@@ -1803,7 +1803,7 @@ body {
 </div>
 <div id="datasets" class="section level1">
 <h1>Datasets</h1>
-<p>In Party Facts we collect party level information from external datasets. We do not include these external datasets but <strong>extract party information only</strong>. Therefore different datasets from the social sciences are linked but are not combined. Currently <strong>51 external datasets</strong> are imported and <strong>34512 external parties</strong> are linked.</p>
+<p>In Party Facts we collect party level information from external datasets. We do not include these external datasets but <strong>extract party information only</strong>. Therefore different datasets from the social sciences are linked but are not combined. Currently <strong>51 external datasets</strong> are imported and around <strong>35000 external parties</strong> are linked.</p>
 <div id="categories" class="section level2">
 <h2>Categories</h2>
 <p>Datasets are grouped into different categories depending on their connection to the Party Facts project as well as their contribution to the database.</p>
