add APSA style guide reference

--- a/codebook/codebook.html
+++ b/codebook/codebook.html
@@ -1828,7 +1828,7 @@ body {
 <li><strong>key</strong> – A unique key (letters and numbers only) identifying the dataset. This key is the same as the folder name of the dataset in the Github repository.</li>
 <li><strong>type</strong> – The type of the dataset and its connection to the Party Facts project – see above.</li>
 <li><strong>name</strong> – Name of the dataset as it appears on the website.</li>
-<li><strong>reference</strong> – A reference for the dataset to be used for citing the source.</li>
+<li><strong>reference</strong> – A reference for the dataset to be used for citing the source (<a href="https://connect.apsanet.org/stylemanual/references/">APSA style guide</a>).</li>
 <li><strong>url</strong> – Dataset webpage (if available).</li>
 <li><strong>description</strong> – A short summary of the party level information included in the dataset.</li>
 <li><strong>comment</strong> – Additional information about the dataset (not required).</li>
