revise inclusion criteria
+ add criteria for electoral alliances
+ minor section reference revise

--- a/codebook/codebook.html
+++ b/codebook/codebook.html
@@ -1658,6 +1658,7 @@ body {
 <li>included in multiple external datasets (preferably at least three datasets)</li>
 </ul>
 <p>The respective threshold for including and linking parties from external datasets depends on the quality of the party level information (names, first/last year, election results) in the external source. We aim to avoid including small and short lived parties. If feasible, we remove these smaller parties during the import.</p>
+<p>We include electoral alliances that take part in <strong>at least two elections</strong> (see section “<a href="#electoral-alliances">Electoral alliances</a>”).</p>
 <p>A party with a significant leader (prime minister, president, etc.) does also serve as an inclusion criteria for Party Facts.</p>
 </div>
 <div id="core-vs.-external-parties" class="section level2">
@@ -1684,7 +1685,7 @@ body {
 <p>While linking a dataset to the project, please keep the following issues in mind:</p>
 <ul>
 <li>If possible link the party to an existing corresponding core party.</li>
-<li>If the respective core party does not exist yet, please add it (see chapter “Adding parties”).</li>
+<li>If the respective core party does not exist yet, please add it (see chapter “<a href="#adding-parties">Adding parties</a>”).</li>
 </ul>
 </div>
 <div id="technical-links" class="section level2">
@@ -1692,7 +1693,7 @@ body {
 <p>There are other technical options for linking parties:</p>
 <ul>
 <li><strong>technical</strong> – e.g. invalid votes, blank votes, no vote, mixed vote etc.</li>
-<li><strong>alliance</strong> – electoral alliance which took part in only one election (see section“Electoral alliances”)</li>
+<li><strong>alliance</strong> – electoral alliance which took part in only one election (see section “<a href="#electoral-alliances">Electoral alliances</a>”)</li>
 <li><strong>unknown</strong> – parties that could not be identified (should include a short discussion comment)</li>
 <li><strong>independent</strong> – non-partisan, independent</li>
 <li><strong>other</strong> – category other in external dataset</li>
@@ -1712,7 +1713,7 @@ body {
 </div>
 <div id="adding-parties" class="section level1">
 <h1>Adding parties</h1>
-<p>If a party of an external dataset has no corresponding match among the core parties, please add a new core party. Again, we included all parties that won <strong>at least one percent in a national election</strong> (see <a href="#parties">Parties</a>). This can be either achieved through the core parties list of the respective country or through the linking section.</p>
+<p>If a party of an external dataset has no corresponding match among the core parties, please add a new core party. Again, we included all parties that won <strong>at least one percent in a national election</strong> (see “<a href="#parties">Parties</a>”). This can be either achieved through the core parties list of the respective country or through the linking section.</p>
 <p>New core parties should include a <strong>vote share</strong> or seats share with its year to identify the party. A short <strong>description</strong> should be included if no share information is available (e.g. party in government only).</p>
 <div id="party-names" class="section level2">
 <h2>Party names</h2>
@@ -1759,7 +1760,7 @@ body {
 <h1>Alliances and changes</h1>
 <div id="electoral-alliances" class="section level2">
 <h2>Electoral alliances</h2>
-<p>We record only electoral alliances that take part in <strong>at least two elections</strong>. All other (one term) electoral alliances are linked to the “technical” category – see section “Technical links”.</p>
+<p>We record only electoral alliances that take part in <strong>at least two elections</strong>. All other (one term) electoral alliances are linked to the “technical” category – see section “<a href="#technical-links">Technical links</a>”.</p>
 <p>An electoral alliance included in at least <strong>three other datasets</strong> may be added as well.</p>
 <p>Core parties that form an electoral alliance included in Party Facts can be recorded in the following format</p>
 <ul>
@@ -1786,7 +1787,7 @@ body {
 <li>renamed into <code>&lt;name&gt;</code> in <code>&lt;year&gt;</code></li>
 <li>e.g. <a href="http://partyfacts.herokuapp.com/data/partycodes/894/">Democratic Liberal Party / New Korea Party</a></li>
 </ul>
-<p>Additionally the new (or respective old) name of the party may be added to the party name by using a slash to divide the names. Please see chapter “Adding parties” for further instructions.</p>
+<p>Additionally the new (or respective old) name of the party may be added to the party name by using a slash to divide the names. Please see chapter “<a href="#adding-parties">Adding parties</a>” for further instructions.</p>
 </div>
 </div>
 <div id="validation" class="section level1">
@@ -1901,7 +1902,7 @@ body {
 <p>In general everyone can add a dataset to the project. But please make sure that the dataset fits the following criteria:</p>
 <ul>
 <li>Only datasets with a scientific background are added to Party Facts</li>
-<li>The dataset should contain the following information as variables. (For detailed information see chapters “Adding parties” and “Datasets”)
+<li>The dataset should contain the following information as variables. (For detailed information see chapters “<a href="#adding-parties">Adding parties</a>” and “<a href="#datasets">Datasets</a>”)
 <ul>
 <li>English name</li>
 <li>Name short</li>
