--- a/codebook/codebook.html
+++ b/codebook/codebook.html
@@ -1696,7 +1696,7 @@ body {
 <li><strong>alliance</strong> – electoral alliance which took part in only one election (see section “<a href="#electoral-alliances">Electoral alliances</a>”)</li>
 <li><strong>unknown</strong> – parties that could not be identified (should include a short discussion comment)</li>
 <li><strong>independent</strong> – non-partisan, independent</li>
-<li><strong>other</strong> – category other in external dataset</li>
+<li><strong>other</strong> – category <em>other</em> in external dataset</li>
 <li><strong>1perc</strong> – a party winning less than 1.0% vote share in national elections
 <ul>
 <li>Please add a short comment to the external party with the respective max. vote share (&lt; 1.0%) and year of election</li>
