--- a/codebook/codebook.html
+++ b/codebook/codebook.html
@@ -1934,7 +1934,10 @@ body {
 <p>2021-03-08</p>
 <ul>
 <li>add example for ‘name other’</li>
-<li>correct number of core parties</li>
+<li>round number of core parties</li>
+<li>APSA style guide reference</li>
+<li>add/revise inclusion criteria for electoral alliances</li>
+<li>minor revisions</li>
 </ul>
 <p>2020-07-17</p>
 <ul>
@@ -2026,6 +2029,11 @@ body {
 <div id="data-robot" class="section level3">
 <h3>Data (robot)</h3>
 <p>Documentation of automatic data changes since November 2018 (user robot).</p>
+<p>2021-03-08</p>
+<ul>
+<li>update core parties share information using external datasets</li>
+<li>removed “ParIS” entry from comment field in core parties (about 500)</li>
+</ul>
 <p>2018-11-17</p>
 <ul>
 <li>removed (some) redundant share information in description or comment</li>
