--- a/codebook/codebook.html
+++ b/codebook/codebook.html
@@ -1603,7 +1603,8 @@ body { text-align: justify; }
 <ul>
 <li>Paul Bederke — GESIS Leibniz Institute for the Social Sciences —
 since 2019</li>
-<li>Holger Döring — SOCIUM Research Center — since 2012</li>
+<li>Holger Döring — SOCIUM Research Center, University of Bremen — since
+2012</li>
 <li>Sven Regel — WZB Berlin Social Science Center — 2012–2023 </br></li>
 </ul>
 <p><strong>Contact</strong></p>
