Render codebook documents

--- a/codebook/codebook.html
+++ b/codebook/codebook.html
@@ -1590,7 +1590,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Party Facts Codebook</h1>
-<h3 class="subtitle"><em>Codebook version: 2026-01-11</em></h3>
+<h3 class="subtitle"><em>Codebook version: 2026-01-18</em></h3>
 
 </div>
 
@@ -1620,7 +1620,7 @@ Dataverse.” <a href="https://dataverse.harvard.edu/dataverse/partyfacts">datav
 </ul>
 <div id="overview" class="section level1">
 <h1>Overview</h1>
-<p><strong>PF-Web</strong> page <a href="https://partyfacts.org">partyfacts.org</a> //
+<p><strong>PF-Web</strong> page <a href="http://partyfacts.org">partyfacts.org</a> //
 <strong>PF-Data</strong> <a href="https://github.com/hdigital/partyfactsdata">Github repository</a>
 // <strong>PF-Dataverse</strong> <a href="https://dataverse.harvard.edu/dataverse/partyfacts">archive</a></p>
 <div id="credits" class="section level2">
