Add 'Germany' to affiliations

--- a/codebook/codebook.html
+++ b/codebook/codebook.html
@@ -1601,11 +1601,11 @@ body { text-align: justify; }
 </style>
 <p><strong>Project leaders</strong></p>
 <ul>
-<li>Paul Bederke — GESIS Leibniz Institute for the Social Sciences —
+<li>Paul Bederke — GESIS Leibniz Institute for the Social Sciences, Germany —
 since 2019</li>
-<li>Holger Döring — SOCIUM Research Center, University of Bremen — since
+<li>Holger Döring — SOCIUM Research Center, University of Bremen, Germany — since
 2012</li>
-<li>Sven Regel — WZB Berlin Social Science Center — 2012–2023 </br></li>
+<li>Sven Regel — WZB Berlin Social Science Center, Germany — 2012–2023 </br></li>
 </ul>
 <p><strong>Contact</strong></p>
 <ul>
