Harmonize metadata and add 'citation.cff' (#87)
- add 'citation.cff' metadata
- add an AI prompt to check metadata coherence
- fix metadata issues: affiliation, year in reference, 'parlgov.org' URL

--- a/codebook/codebook.html
+++ b/codebook/codebook.html
@@ -1590,7 +1590,7 @@ border-radius: 0px;
 
 
 <h1 class="title toc-ignore">Party Facts Codebook</h1>
-<h3 class="subtitle"><em>Codebook version: 2026-01-11</em></h3>
+<h3 class="subtitle"><em>Codebook version: 2026-01-18</em></h3>
 
 </div>
 
@@ -1601,10 +1601,11 @@ body { text-align: justify; }
 </style>
 <p><strong>Project leaders</strong></p>
 <ul>
-<li>Paul Bederke — GESIS Leibniz Institute for the Social Sciences —
+<li>Paul Bederke — GESIS Leibniz Institute for the Social Sciences, Germany —
 since 2019</li>
-<li>Holger Döring — SOCIUM Research Center — since 2012</li>
-<li>Sven Regel — WZB Berlin Social Science Center — 2012–2023 </br></li>
+<li>Holger Döring — SOCIUM Research Center, University of Bremen, Germany — since
+2012</li>
+<li>Sven Regel — WZB Berlin Social Science Center, Germany — 2012–2023 </br></li>
 </ul>
 <p><strong>Contact</strong></p>
 <ul>
@@ -1614,12 +1615,12 @@ since 2019</li>
 <ul>
 <li>Döring, Holger, and Sven Regel. 2019. “Party Facts: A Database of
 Political Parties Worldwide.” Party Politics 25(2): 97–109. doi: <a href="https://doi.org/10.1177/1354068818820671">10.1177/1354068818820671</a></li>
-<li>Bederke, Paul, Holger Döring, and Sven Regel. 2019. “Party Facts
+<li>Bederke, Paul, Holger Döring, and Sven Regel. 2018. “Party Facts
 Dataverse.” <a href="https://dataverse.harvard.edu/dataverse/partyfacts">dataverse.harvard.edu/dataverse/partyfacts</a></li>
 </ul>
 <div id="overview" class="section level1">
 <h1>Overview</h1>
-<p><strong>PF-Web</strong> page <a href="https://partyfacts.org">partyfacts.org</a> //
+<p><strong>PF-Web</strong> page <a href="http://partyfacts.org">partyfacts.org</a> //
 <strong>PF-Data</strong> <a href="https://github.com/hdigital/partyfactsdata">Github repository</a>
 // <strong>PF-Dataverse</strong> <a href="https://dataverse.harvard.edu/dataverse/partyfacts">archive</a></p>
 <div id="credits" class="section level2">
